fix search alignment

--- a/packages/web/src/components/Search/Search.module.scss
+++ b/packages/web/src/components/Search/Search.module.scss
@@ -1,5 +1,4 @@
 .search {
-  margin-top: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -10,5 +9,4 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  margin-top: 1rem;
 }
